--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,9 @@ syntax {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+    .container{
+        margin: 5% 2%;
+    }
     syntax{
         font-size: 55%;    
     }
