--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 a, h1, h2, h3, h4, h5, h6, label, p, span {
     color:lavender;
     font-family: 'Helvetica', 'Arial', sans-serif;
+    text-decoration: none;
 }
 
 body {
@@ -35,11 +36,7 @@ background-color: RoyalBlue;
 }
 
 .center-item {
-    margin: 0;
-    position: absolute;
-    left: 50%;
-    -ms-transform: translate(0%, -50%);
-    transform: translate(0%, -50%);
+    text-align: center;
 }
 
 .center-subheaders-index {
